# ngsxfem

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CTestConfig.cmake  Dockerfile  INSTALLATION.md  MANIFEST.in  Makefile.am  README.md  README.org  _ngsolve_deps_provider.py  ci_build.sh  ci_ctests.sh  configure.ac  ngsolve_addon.cmake  paper.md  pyproject.toml  setup.py  singularity.def  symboliccutbfi.cpp  todo.org
common/: Makefile.am  spacetimefe.cpp  spacetimefe.hpp  spacetimefespace.cpp  spacetimefespace.hpp  spacetimeintegrators.cpp  spacetimeintegrators.hpp  spacetimetraceops.cpp
cutint/: CMakeLists.txt  Makefile.am  cutgeom.cpp  cutintegral.cpp  cutintegral.hpp  fieldeval.cpp  fieldeval.hpp  lsetintdomain.cpp  lsetintdomain.hpp  mlsetintegration.cpp  mlsetintegration.hpp  npxtest.cpp  python_cutint.cpp  spacetimecutrule.cpp  spacetimecutrule.hpp  straightcutrule.cpp  straightcutrule.hpp  xdecompose.cpp  xdecompose.hpp  xintegration.cpp  xintegration.hpp
cutint/experimental/: Makefile  draw.tex  execute_and_tex.sh  polytope_standalone.cpp
cutint/pde_demos/: Makefile.in  test_2D_space.pde  test_2D_spacetime.pde  test_3D_space.pde  test_3D_spacetime.pde
cutint/py_demos/: CMakeLists.txt  area_of_a_circle_quads.py  area_of_a_circle_saye_ho.py  debug_polynomes.py  debug_saye.py  draw_point.py  error_comp.gp  integrate.py  integrate2.py  integrate_one_big_quad2D.py  integrate_one_big_quad3D.py  integrate_one_big_quad3D2.py  integrate_polynomes.py  integrate_quads2d_conv.py  integrate_visu.py  make_cube_mesh.py  tikz_frame.tex  (+1 more)
demos/: CMakeLists.txt  README.md  bnd_cut.py  cutfem.py  cutfem_convenience.py  fictdom.py  fictdom_dg.py  fictdom_dg_ghostpen.py  fictdom_ghostpen.py  fictdom_ghostpen_restrictedblf.py  fictdom_mlset.py  linelasticity.py  lsetcurv_boundary.py  lsetgeoms.py  make_uniform3D_grid.py  mlset_poisson.py  moving_domain.py  nxfem.py  nxfem_higher_order.py  spacetime_geom_error.py  stokescutfem.py  surfstokestracefem.py  traceconverg.py  tracefem.py  tracefem3d.py  unf_interf_prob.py  unfitted_poisson.py  xfespaces.py
levelset/: CMakeLists.txt  corrsource.cpp  python_levelset.cpp
lsetcurving/: CMakeLists.txt  calcgeomerrors.cpp  calcgeomerrors.hpp  calcpointshift.cpp  calcpointshift.hpp  lsetcurv.py  lsetrefine.cpp  lsetrefine.hpp  p1interpol.cpp  p1interpol.hpp  projshift.cpp  projshift.hpp  python_lsetcurving.cpp  setdeformation.cpp  shiftedevaluate.cpp  shiftedevaluate.hpp  shiftintegrators.cpp  shiftintegrators.hpp
meancurvflow/: Makefile.am  meancurv.cpp
osmosis/: CMakeLists.txt  extension.cpp  fictext.cpp  meancurv.cpp  python_osmosis.cpp
parabolic/: CMakeLists.txt  Makefile.am  solveinstat.cpp  solveinstatx.cpp  stprecond.cpp  stprecond.hpp
py_tutorials/: CMakeLists.txt  compp1prolong-playground.py  cutfem.py  fictdom_dg_ghostpen.py  fictdom_ghostpen.py  fictdom_ghostpen_restrictedblf.py  fictdomnitsche.py  mg_cut_poisson_p1.py  mg_cut_poisson_p2.py  moving_domain.py  nitschesimple.py  nitschexfem.py  nitschexfem_symbolic.py  nxfem.py  nxfem_higher_order.py  p1prolong-playground.py  stokescutfem.py  stokesxfem.py  symbolic_tracefem.py  symboliccut.py  symboliccut2.py  traceconverg.py  tracefem.py  tracefem3d.py  tracefem_symbolic.py  tracefem_symbolic_2d.py  xfespaces.py
python/: CMakeLists.txt  Makefile.am  __init__.py  cutmg.py  lset_smoothblend.py  lset_spacetime.py  lsetcurv.py  mlset.py  mlset2.py  ngs_check.py  python_ngsxfem.cpp  python_xfem.cpp  utils.py
spacetime/: CMakeLists.txt  IF_circle.py  IF_periodic.py  Makefile.am  SpaceTimeFE.cpp  SpaceTimeFE.hpp  SpaceTimeFESpace.cpp  SpaceTimeFESpace.hpp  diffopDt.cpp  diffopDt.hpp  diffopFixt.cpp  diffopFixt.hpp  fictdomain_Neumann.py  fictdomain_Neumann_debugging_for_spacetime_ghost_penalty.py  fictdomain_Neumann_quad_testing.py  lset_spacetime.py  myElement.cpp  myElement.hpp  myFESpace.cpp  myFESpace.hpp  myHOElement.cpp  myHOElement.hpp  python_spacetime.cpp  shiftedeval_debug.py  spacetime.py  spacetime_new.py  spacetime_vtk.cpp  spacetime_vtk.hpp  spacetimefe.cpp  spacetimefe.hpp  spacetimefespace.cpp  spacetimefespace.hpp  spacetimeintegrators.cpp  spacetimeintegrators.hpp  spacetimetraceops.cpp  test_spacetimeint.py  timecf.cpp  timecf.hpp
stokes/: CMakeLists.txt  Makefile.am  gammaforce.cpp  gammaforce.hpp  my_ghostpenalty.cpp  my_ghostpenalty.hpp  python_stokes.cpp  stokes.py  stxstokesIntegrators.cpp  stxstokesIntegrators.hpp  xmasscompone.cpp  xmasscompone.hpp  xmeancurv.cpp  xmeancurv.hpp  xstokesIntegrators.cpp  xstokesIntegrators.hpp  xstokesNitsche.cpp  xstokesNitsche.hpp  xstokesspace.cpp  xstokesspace.hpp
tests/: CMakeLists.txt  ngsxfem_report.py  nxfem_old_style.py  test_xlocalgeom.cpp
tracefem/: CMakeLists.txt  hdgtracefem.py  hdgtraceintegrators.cpp  hdgtraceintegrators.hpp  tracefem.py  tracefem_python.cpp  traceinstat.cpp  traceintegrators.cpp  traceintegrators.hpp  traceoutput.cpp
utils/: CMakeLists.txt  Makefile.am  bitarraycf.cpp  bitarraycf.hpp  calccond.hpp  error.cpp  error.hpp  fieldeval.cpp  fieldeval.hpp  ngs_version_util.py  ngsxstd.cpp  ngsxstd.hpp  output.cpp  output.hpp  p1interpol.cpp  p1interpol.hpp  python_utils.cpp  restrictedblf.cpp  restrictedblf.hpp  restrictedfespace.cpp  restrictedfespace.hpp  spacetimechecks.hpp  stcoeff.cpp  stcoeff.hpp  uncrustify.cfg  utils.py  vtkoutput.cpp  vtkoutput.hpp  xprolongation.cpp  xprolongation.hpp
xfem/: CMakeLists.txt  Makefile.am  __init__.py  aggregates.cpp  aggregates.hpp  basics.py  cutinfo.cpp  cutinfo.hpp  dudnjumpIntegrators.cpp  fictdomIntegrators.cpp  fictdomfes.cpp  fictdomfes.hpp  geometrytests.cpp  ghostpenalty.cpp  ghostpenalty.hpp  npxtest.cpp  numprocx.cpp  python_xfem.cpp  sFESpace.cpp  sFESpace.hpp  sdxfemIntegrators.cpp  sdxfemIntegrators.hpp  setvaluesx.hpp  stxfemIntegrators.cpp  stxfemIntegrators.hpp  symboliccutbfi.cpp  symboliccutbfi.hpp  symboliccutlfi.cpp  symboliccutlfi.hpp  xFESpace.cpp  xFESpace.hpp  xdecompose.cpp  xdecompose.hpp  xfemIntegrators.cpp  xfemIntegrators.hpp  xfemNitsche.cpp  xfemNitsche.hpp  xfemVisInts.cpp  xfemVisInts.hpp  xfemdiffops.cpp  (+5 more)
(+414 files in other folders)
