[project]
name = "xfem"
dynamic = ["version", "dependencies"]
authors = [{name="Christoph Lehrenfeld", email= "lehrenfeld@math.uni-goettingen.de"}]
description = "(ngs)xfem is an Add-on library to Netgen/NGSolve for unfitted/cut FEM."
urls = {github="https://github.com/ngsxfem/ngsxfem"}
readme = "README.md"
requires-python = ">=3.8"
#dependencies = [] # ngsolve will be added automatically
classifiers = [
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=8", "toml", "scikit-build-core>=0.3.3", "pybind11_stubgen", "cmake>=3.26.1", "ngsolve>=6.2.2404.post2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.26.1"
ninja.version = ">=1.11"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/_version.py"]
#build-dir = "./build_py/{wheel_tag}" # local build directory - for debugging

experimental = true
# This adds ngsolve (with exact build-time version) to the dependencies
metadata.dependencies.provider="ngsolve._scikit_build_core_dependencies"

[tool.setuptools_scm]  # Section required
write_to = "python/_version.py"
local_scheme = "no-local-version"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel]
#build-verbosity = 1
skip = """
  pp*
  *_i686
  *musllinux*
  *win32
"""

[tool.cibuildwheel.linux]
repair-wheel-command = "mv {wheel} {dest_dir} && rename linux_x86_64 manylinux_2_17_x86_64.manylinux2014_x86_64 {dest_dir}/*-linux_x86_64*.whl"


[tool.cibuildwheel.macos]
environment = {MACOSX_DEPLOYMENT_TARGET="10.15"}
repair-wheel-command = ""
archs = ["universal2"]

